refactor: доработать сервисы